--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-  <meta property="og:type" content="website" />
-  <meta property="og:locale" content="en_US" />
-  <meta property="og:determiner" content="the" />
-  <meta property="og:description" content="CTO and Entrepreneur living in Hermann, Missouri" />
-  <meta property="og:site_name" content="Mícheál Morgan" />
-  <meta property="og:url" content="https://michealmorgan.com/" />
-  <meta property="og:image" content="https://michealmorgan.com/images/background.jpg" />
   
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -22,33 +14,22 @@
 <body>
 
   <div id="container">
-    <h1>Mícheál Morgan is a CTO living in Missouri <a href="https://en.wikipedia.org/wiki/Hermann,_Missouri">Wine Country</a></h1>
+    <h1>Aaron Charlton, PhD, MBA - Assistant Professor of Marketing at Illinois State University</h1>
 
-    <p>Early in life, I was fortunate to fall in love with the magic of technology. My youth was spent devouring Linux, hacking drivers and experiencing sleepless nights learning code the hard way.</p>
+    <p>I teach marketing research and marketing communications. My research is focused on understanding and improving the practice of scientific research within the field of marketing.</p>
 
-    <p>Today, I am the CTO at <a href="https://www.caxiam.com">Caxiam</a> where we build mission-critical software for data-sensitive industries.</p>
+    <p>I run a lab called the Metascience & Marketing Lab at ISU.</p>
+    
+    <p>I work with clients in my classes to give my students hands-on experience. There was no book for this kind of thing so I wrote the book: <i>Real World Clients: A Guide for Student Consultants</i></p>
 
-    <p>I am an advocate for <a href="https://github.com/morgan/">open source</a>, passionate for all things <a href="https://keybase.io/michealmorgan">crypto</a>, and obsessed with <a href="https://www.linkedin.com/in/michealmorgan/">client success</a>.</p>
+    <p>I run <a href="https://www.openmktg.org/">OpenMKTG.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
 
-    <p>I call <a href="https://en.wikipedia.org/wiki/Hermann,_Missouri">Hermann Missouri</a> home with my beautiful <a href="https://alexandriatrsek.com">wife</a>, baby boy, and <a href="images/poodle.jpg">family dog</a>.</p>
+    <p>To email me: aaronbcharlton at gmail dot com.</p>
 
-    <p id="contact"><a href="mailto:hello@michealmorgan.com">Say hello</a>.</p>
 
-    <br /><br /><br />
-
-    <p><small>Photo by <a href="https://alexandriatrsek.com">Alexandria Trsek</a>, taken in Prague, Czech Republic</small></p>
   </div>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-96644395-1', 'auto');
-    ga('send', 'pageview');
-
-  </script>
+  
 
 </body>    
 </html>
