--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
   <div id="container">
     <h1>Aaron Charlton, PhD, MBA - Assistant Professor of Marketing at Illinois State University</h1>
 
-    <p>I teach marketing research and marketing communications. My research is focused on understanding and improving the practice of scientific research within the field of marketing.</p>
-
-    <p>I run a lab called the Metascience & Marketing Lab at ISU.</p>
+    <p>I teach marketing research and marketing communications. I work with clients in my classes to give my students hands-on experience. 
+      There was no book for this kind of thing so I wrote the book: <i>Real World Clients: A Guide for Student Consultants</i></p>
+      
+    <p>My research is focused on understanding and improving the practice of scientific research within the field of marketing. 
+      I run a lab called the Metascience & Marketing Lab at ISU.
+      I run <a href="https://www.openmktg.org/">OpenMKTG.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
     
-    <p>I work with clients in my classes to give my students hands-on experience. There was no book for this kind of thing so I wrote the book: <i>Real World Clients: A Guide for Student Consultants</i></p>
-
-    <p>I run <a href="https://www.openmktg.org/">OpenMKTG.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
+    <p>You can download my CV to learn more</p>
 
     <p>To email me: aaronbcharlton at gmail dot com.</p>
 
