--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <body>
 
   <div id="container">
-    <h1>Aaron Charlton, PhD, MBA - Assistant Professor of Marketing at Illinois State University</h1>
+    <h1>Aaron Charlton, PhD, MBA<br>Assistant Professor of Marketing at Illinois State University</h1>
 
-    <p>I teach marketing research and marketing communications. I work with clients in my classes to give my students hands-on experience. 
-      There was no book for this kind of thing so I wrote the book: <i>Real World Clients: A Guide for Student Consultants</i></p>
+    <p>I teach marketing research and marketing communications. My classes generally require the students to work with real-world clients in order to gain hands-on experience. 
+      There was no book for this sort of thing so I wrote the book: <i>Real World Clients: A Guide for Student Consultants</i></p>
       
     <p>My research is focused on understanding and improving the practice of scientific research within the field of marketing. 
       I run a lab called the Metascience & Marketing Lab at ISU.
       I run <a href="https://www.openmktg.org/">OpenMKTG.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
     
-    <p>You can download my CV to learn more</p>
+    <p>You can download my CV to learn more about me.</p>
 
     <p>To email me: aaronbcharlton at gmail dot com.</p>
 
