--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       
     <p>My research is focused on understanding and improving the practice of scientific research within the field of marketing. 
       I run a lab called the Metascience & Marketing Lab at ISU.
-      I run <a href="https://www.openmktg.org/">OpenMKTG.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
+      I run <a href="https://www.openmktg.org/" target="_blank">OpenMKTG.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
     
-    <p>You can download my CV to learn more about me.</p>
+    <p>You can <a href="../docs/aaron-charltons-cv-jan22.pdf">download my CV</a> to learn more about me.</p>
 
     <p>To email me: aaronbcharlton at gmail dot com.</p>
 
