--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Aaron Charlton, PhD, MBA<br>Assistant Professor of Marketing at Illinois State University</h1>
 
     <p>I teach marketing research and marketing communications. My classes generally require the students to work with real-world clients in order to gain hands-on experience. 
-      There was no book for this sort of thing so I wrote the book: <i>Real World Clients: A Guide for Student Consultants</i></p>
+      There was no book for this sort of thing so I wrote the book: <i>Real World Clients: A Guide for Student Consultants</i>.</p>
       
     <p>My research is focused on understanding and improving the practice of scientific research within the field of marketing. 
       I run a lab called the Metascience & Marketing Lab at ISU.
