--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
   <div id="container">
     <h1>Aaron Charlton, PhD, MBA<br>Assistant Professor of Marketing at Illinois State University</h1>
 
-    <p>I teach marketing research and marketing communications. My classes generally require the students to work with real-world clients in order to gain hands-on experience. 
-      There was no book for this sort of thing so I wrote the book: <i>Real World Clients: A Guide for Student Consultants</i>.</p>
+    <p>I teach marketing research and marketing communications. Students in my classes work with real-world clients in order to gain hands-on experience. There was no book for this sort of thing so I wrote the book: <i>Real World Clients: A Guide for Student Consultants</i>.</p>
       
-    <p>My research is focused on understanding and improving the practice of scientific research within the field of marketing. 
-      I run a lab called the Metascience & Marketing Lab at ISU.
-      I run <a href="https://www.openmktg.org/" target="_blank">OpenMKTG.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
+    <p>My research is focused on understanding and improving the practice of scientific research within the field of marketing. I run the Metascience & Marketing Lab at ISU and I created <a href="https://www.openmktg.org/" target="_blank">OpenMKTG.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
     
     <p>You can <a href="../docs/aaron-charltons-cv-jan22.pdf">download my CV</a> to learn more about me.</p>
 
