--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="container">
     <h1>Aaron Charlton, PhD, MBA<br>Assistant Professor of Marketing at Illinois State University</h1>
 
-    <p>I teach marketing research and marketing communications. Students in my classes work with real-world clients in order to gain hands-on experience. There was no book for this sort of thing so I wrote the book: <a href="https://leanpub.com/realworldclients"><i>Real World Clients: A Guide for Student Consultants</i></a>.</p>
+    <p>I teach marketing research and marketing communications. Students in my classes work with real-world clients in order to gain hands-on experience. There was no book for this sort of thing so I wrote the book: <a href="https://leanpub.com/realworldclients" target="_blank"><i>Real World Clients: A Guide for Student Consultants</i></a>.</p>
       
     <p>My research is focused on understanding and improving the practice of scientific research within the field of marketing. I run the Metascience & Marketing Lab at ISU and I created <a href="https://www.openmktg.org/" target="_blank">OpenMKTG.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
     
