--- a/404.html
+++ b/404.html
@@ -1,1 +1,27 @@
-#
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+  <title>Aaron Charlton, PhD, MBA - Assistant Professor of Marketing at Illinois State University</title>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
+</head> 
+    
+<body>
+
+  <div id="container">
+    <h1>Uh-oh!</h1>
+
+    <p>It looks like we made some changes and you're lost! Why don't you try the <a href="/">homepage</>?</p>
+
+
+  </div>
+
+  
+
+</body>    
+</html>
