--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>Aaron Charlton, PhD, MBA - Assistant Professor of Marketing at Illinois State University</title>
+  <title>404 error | aaroncharlton.com</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -16,7 +16,7 @@
   <div id="container">
     <h1>Uh-oh!</h1>
 
-    <p>It looks like we made some changes and you're lost! Why don't you try the <a href="/">homepage</>?</p>
+    <p>It looks like I made some changes and you're lost! Why don't you try the <a href="/">homepage</>?</p>
 
 
   </div>
