--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <p>You can <a href="https://docs.google.com/document/d/1MVgEztrXpLfa72Gt7hzgLXKMLxmUd301aH2teXhWiuY/export?format=pdf">download my CV</a> to learn more about my work.</p>
 
-    <p>To email me: aaronbcharlton at gmail dot com.</p>
+    <p>To contact me: aaronbcharlton{at}gmai1.com.</p>
 
 
   </div>
