--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
   </div>
 
-  
+  <div id="footer">
+<p><a href ="https://github.com/aaroncharlton/aaroncharlton.github.io">https://github.com/aaroncharlton/aaroncharlton.github.io</a></p>
+  </div>
 
 </body>    
 </html>
