--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 
   <div id="footer">
-<p><a href ="https://github.com/aaroncharlton/aaroncharlton.github.io">https://github.com/aaroncharlton/aaroncharlton.github.io</a></p>
+<p><a href ="https://github.com/aaroncharlton/aaroncharlton.github.io">Code for this site</a></p>
   </div>
 
 </body>    
