--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/primary.css">
   <link rel="stylesheet" href="css/red.css">
 </head> 
     
