--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/primary.css">
-  <link rel="stylesheet" href="css/red.css">
+  <link rel="stylesheet" href="css/skins/red.css">
 </head> 
     
 <body>
