--- a/404.html
+++ b/404.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/lightblue.css">
+  <link rel="stylesheet" href="css/primary.css">
+  <link rel="stylesheet" href="css/skins/red.css">
 </head> 
     
 <body>
