--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="container">
     <h1>Aaron Charlton, PhD, MBA<br>Marketing Researcher</h1>
       
-    <p>My research is focused on understanding and improving the practice of scientific research within the field of marketing. I run the <a href="https://www.metamarklab.com" target="_blank">Metascience & Marketing Lab</a> at ISU and I created <a href="https://openmkt.org/" target="_blank">OpenMKT.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
+    <p>My research is focused on understanding and improving the practice of scientific research within the field of marketing. I created <a href="https://openmkt.org/" target="_blank">OpenMKT.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
     
     <p>I have taught marketing research and marketing communications at University of Oregon and Illinois State University. Students in my classes have worked with real-world clients in order to gain hands-on experience. There was no book for this sort of thing so I wrote the book (and it's free): <a href="https://realworldclients.com/" target="_blank"><i>Real World Clients: A Guide for Student Consultants</i></a>.</p>
 
