--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <p>I have taught marketing research, digital marketing and marketing communications at University of Oregon and Illinois State University. Students in my classes have worked with real-world clients in order to gain hands-on experience. There was no book for this sort of thing so I wrote the book (and it's free): <a href="https://realworldclients.com/" target="_blank"><i>Real World Clients: A Guide for Student Consultants</i></a>.</p>
 
-    <p>You can <a href="https://docs.google.com/document/d/1MVgEztrXpLfa72Gt7hzgLXKMLxmUd301aH2teXhWiuY/export?format=pdf">download my CV</a> to learn more about my work.</p>
+    <p>You can <a href="https://docs.google.com/document/d/1MVgEztrXpLfa72Gt7hzgLXKMLxmUd301aH2teXhWiuY/export?format=pdf">download my CV</a> or <a href="https://docs.google.com/document/d/1YFGgI-KcEJXmTphjZAvB4_Heu1SeDynGSKxSaauhu6k/export?format=pdf">my resume</a> to learn more about my work.</p>
 
     <p>To contact me: aaronbcharlton{at}gmai1.com.</p>
 
