--- a/index.html
+++ b/index.html
@@ -15,13 +15,8 @@
 <body>
 
   <div id="container">
-    <h1>Aaron Charlton, PhD, MBA<br>Marketing Researcher</h1>
-    <h2>Research</h2>  
-    <p>My research is focused on understanding and improving the practice of scientific research within the field of marketing. I created <a href="https://openmkt.org/" target="_blank">OpenMKT.org</a>, a website aimed at increasing transparency and quality in marketing science.</p>
-    <h2>Teaching</h2>
-    <p>I have taught marketing research, digital marketing and marketing communications at University of Oregon and Illinois State University. Students in my classes have worked with real-world clients in order to gain hands-on experience. There was no book for this sort of thing so I wrote the book (and it's free): <a href="https://realworldclients.com/" target="_blank"><i>Real World Clients: A Guide for Student Consultants</i></a>.</p>
-    <h2>Consulting</h2>
-    <p>I also have quite a bit of experience in real-world marketing, with an emphasis on digital marketing. I optimize websites for conversion and search engine ranking and I drive traffic to websites through both paid (ads) and organic methods.</p>
+    <h1>Aaron Charlton, PhD, MBA<br>Marketing Researcher</h1> 
+    <p>I am a marketing research with experience in both industry and academia. My research is mainly focused on improving evidence quality in the field of marketing (check out my site: <a href="https://openmkt.org/">OpenMKT.org</a>). I've taught courses on various marketing topics, including digital marketing, marketing communications and marketing research. I've developed a <a href="https://realworldclients.com/">free-to-use curriculum for working with real-world clients</a>. Prior to focusing on marketing research, I was an expert digital marketing analyst, which skills I've kept up over time through various client projects.</p>
     <p>You can <a href="https://docs.google.com/document/d/1MVgEztrXpLfa72Gt7hzgLXKMLxmUd301aH2teXhWiuY/export?format=pdf">download my CV</a> or <a href="https://docs.google.com/document/d/1YFGgI-KcEJXmTphjZAvB4_Heu1SeDynGSKxSaauhu6k/export?format=pdf">my resume</a> to learn more about my work.</p>
 
     <p>To contact me: aaronbcharlton{at}gmai1.com.</p>
