--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div id="container">
     <h1>Aaron Charlton, PhD, MBA<br>Marketing Researcher</h1> 
-    <p>I am a marketing research with experience in both industry and academia. My research is mainly focused on improving evidence quality in the field of marketing (check out my site: <a href="https://openmkt.org/">OpenMKT.org</a>). I've taught courses on various marketing topics, including digital marketing, marketing communications and marketing research. I've developed a <a href="https://realworldclients.com/">free-to-use curriculum for working with real-world clients</a>. Prior to focusing on marketing research, I was an expert digital marketing analyst, which skills I've kept up over time through various client projects.</p>
+    <p>I am a metascience and marketing researcher. I maintain <a href="https://openmkt.org/">OpenMKT.org</a>, a website dedicated to improving evidence quality in the field of marketing. Also, check out <a href="https://realworldclients.com/"><i>Real World Clients</i></a>, my free student guide and curriculum for doing client-based projects.</p>
     <p>You can <a href="https://docs.google.com/document/d/1MVgEztrXpLfa72Gt7hzgLXKMLxmUd301aH2teXhWiuY/export?format=pdf">download my CV</a> or <a href="https://docs.google.com/document/d/1YFGgI-KcEJXmTphjZAvB4_Heu1SeDynGSKxSaauhu6k/export?format=pdf">my resume</a> to learn more about my work.</p>
 
     <p>To contact me: aaronbcharlton{at}gmai1.com.</p>
