--- a/404.html
+++ b/404.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="refresh" content="0; URL='https://aaroncharlton.com'" />
+    <title>404 - redirect</title>
+</head>
 
-  <title>404 error | aaroncharlton.com</title>
+<body></body>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/primary.css">
-  <link rel="stylesheet" href="css/skins/rain.css">
-</head> 
-    
-<body>
-
-  <div id="container">
-    <h1>Uh-oh!</h1>
-
-    <p>It looks like I made some changes and you're lost! Why don't you try the <a href="/">homepage</>?</p>
-
-
-  </div>
-
-  
-
-</body>    
 </html>
