--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>To contact me: aaronbcharlton{at}gmai1.com.</p>
 
     <p><a href="https://www.linkedin.com/in/aaroncharlton/"><img width="24" height="24" src = "https://raw.githubusercontent.com/aaroncharlton/aaroncharlton.github.io/main/images/5296501_linkedin_network_linkedin%20logo_icon%20(1).png"></a>
-      <a href="https://twitter.com/AaronCharlton"><img width="24" height="24" src = "https://raw.githubusercontent.com/aaroncharlton/aaroncharlton.github.io/main/images/5296516_tweet_twitter_twitter%20logo_icon.png"></a></p>
+      <a href="https://twitter.com/AaronCharlton"><img width="24" height="24" src = "https://raw.githubusercontent.com/aaroncharlton/aaroncharlton.github.io/main/images/5296516_tweet_twitter_twitter%20logo_icon.png"></a>
 <a href="https://scholar.google.com/citations?hl=en&user=-9IttlEAAAAJ"><img width="24" height="24" src = "https://raw.githubusercontent.com/aaroncharlton/aaroncharlton.github.io/main/images/17520148421579517848-48.png"></a></p>
   </div>
 
