--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>I am a metascience and marketing researcher. I maintain <a href="https://openmkt.org/">OpenMKT.org</a>, a website dedicated to improving evidence quality in the field of marketing. Also, check out <a href="https://realworldclients.com/"><i>Real World Clients</i></a>, my free student guide and curriculum for doing client-based projects.</p>
     <p>You can <a href="https://docs.google.com/document/d/1YFGgI-KcEJXmTphjZAvB4_Heu1SeDynGSKxSaauhu6k/export?format=pdf">download my resume</a> to learn more about my work.</p>
 
-    <p>To contact me: aaronbcharlton{at}gmai1.com.</p>
+    <p>To contact me: <a href='mail&#116;o&#58;&#97;%&#54;&#50;c&#104;&#97;rlton%40%70%72%6Fton%6D%61il%2&#69;co%6&#68;'>abcharl&#116;on&#64;pro&#116;on&#109;&#97;&#105;l&#46;c&#111;m</a></p>
 
     <p><a href="https://www.linkedin.com/in/aaroncharlton/"><img width="24" height="24" src = "https://raw.githubusercontent.com/aaroncharlton/aaroncharlton.github.io/main/images/5296501_linkedin_network_linkedin%20logo_icon%20(1).png"></a>
       <a href="https://twitter.com/AaronCharlton"><img width="24" height="24" src = "https://raw.githubusercontent.com/aaroncharlton/aaroncharlton.github.io/main/images/5296516_tweet_twitter_twitter%20logo_icon.png"></a>
