--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>Aaron Charlton, PhD, MBA - Marketing Researcher</title>
+  <title>Aaron Charlton, PhD, MBA - Marketing Guy</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -16,7 +16,7 @@
 
   <div id="container">
     <h1>Aaron Charlton, PhD, MBA<br>Marketing Researcher</h1> 
-    <p>I am a metascience and marketing researcher working in industry (formerly in academia). 
+    <p>I have been a marketing practitioner, researcher, and teacher. I'm currently focusing more on the practice side, working for <a href="https://www.awayclinic.com/">Away Clinic</a> and <a href="https://www.neurologyassociates.com/">Neurology Associates Neuroscience Center</a> in Arizona.
       I maintain <a href="https://openmkt.org/">OpenMKT.org</a>, a website dedicated to improving the quality of evidence that is published in scientific journals in the field of marketing. 
       Also, check out <a href="https://realworldclients.com/"><i>Real World Clients</i></a>, my free student guide and curriculum for doing client-based projects.</p>
     <p>You can <a href="https://docs.google.com/document/d/1YFGgI-KcEJXmTphjZAvB4_Heu1SeDynGSKxSaauhu6k/export?format=pdf">download my resume</a> to learn more about my work.</p>
