--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <div id="container">
-    <h1>Aaron Charlton, PhD, MBA<br>Marketing Researcher</h1> 
+    <h1>Aaron Charlton, PhD, MBA<br>Marketing Guy</h1> 
     <p>I have been a marketing practitioner, researcher, and teacher. I'm currently focusing more on the practice side, working for <a href="https://www.awayclinic.com/">Away Clinic</a> and <a href="https://www.neurologyassociates.com/">Neurology Associates Neuroscience Center</a> in Arizona.
       I maintain <a href="https://openmkt.org/">OpenMKT.org</a>, a website dedicated to improving the quality of evidence that is published in scientific journals in the field of marketing. 
       Also, check out <a href="https://realworldclients.com/"><i>Real World Clients</i></a>, my free student guide and curriculum for doing client-based projects.</p>
