--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
 
   <div id="container">
     <h1>Phoenix Timber</h1> 
+    <img src = "https://raw.githubusercontent.com/aaroncharlton/phxtimber/main/images/logo_phoenix_timber-GRAYSCALE.png"/>
     <p>Phoenix Timber is a tree removal and tree care service located in Northern California. We are based out of Paradise, California and we cover all the surrounding mountain towns.</p>
     <p>You can <a href="https://docs.google.com/document/d/1YFGgI-KcEJXmTphjZAvB4_Heu1SeDynGSKxSaauhu6k/export?format=pdf">download my resume</a> to learn more about my work.</p>
-
     <p>To contact me: </p>
     <img src="https://raw.githubusercontent.com/aaroncharlton/aaroncharlton.github.io/main/images/email_me.png">
-
-    <p><a href="https://www.linkedin.com/in/aaroncharlton/"><img width="24" height="24" src = "https://raw.githubusercontent.com/aaroncharlton/aaroncharlton.github.io/main/images/5296501_linkedin_network_linkedin%20logo_icon%20(1).png"></a>
-      <a href="https://twitter.com/AaronCharlton"><img width="24" height="24" src = "https://raw.githubusercontent.com/aaroncharlton/aaroncharlton.github.io/main/images/5296516_tweet_twitter_twitter%20logo_icon.png"></a>
-<a href="https://scholar.google.com/citations?hl=en&user=-9IttlEAAAAJ"><img width="24" height="24" src = "https://raw.githubusercontent.com/aaroncharlton/aaroncharlton.github.io/main/images/17520148421579517848-48.png"></a></p>
   </div>
 
   <div id="footer">
